# Kurvendiskussion

./: .clang-format  CMakeLists.txt  README.md  main.cpp  utils.hpp
Derivation/: Derivation.cpp  Derivation.hpp
Graph/: Graph.cpp  Graph.hpp
Nullstellen/: Zeros.cpp  Zeros.hpp
Zeros/: Zeros.cpp  Zeros.hpp
